# speechless

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_hybrid_voice_assistant_demo.py  run_visual_dashboard.py
.kiro/specs/bedrock-stt-tts-integration/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/voice-assistant-vehicle-control/: .config.kiro  design.md  requirements.md  tasks.md
bridge/: kuksa_link.py  main.py  poke.py  requirements.txt  signals.py  store.py
clippy.config/: extensions.enabled  lenses.md  models
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  Car.jsx  RoutingPanel.jsx  signals.js  styles.css  useVehicleSocket.js
doc/: architecture.md
docker/: docker-compose.yml
docs/: architecture.drawio  demo_presentation.md  demo_script.md  merge_plan_hybrid_branch.md
docs/diagrams/: 01-speech-to-command.md  02-online-query-processing.md  03-offline-conversational-followup.md  04-connectivity-transition.md  05-fuel-aware-route-planning.md  06-emergency-biometric-response.md  07-use-cases.md
scripts/: run_dashboard.py
speechless/: config.py  main.py  models.py
speechless/cloud/: __init__.py
speechless/connectivity/: __init__.py
speechless/context/: conversation.py  memory.py
speechless/dashboard/: app.py  backends.py  interaction.py  kuksa_bridge.py  providers.py  runtime.py
speechless/edge/: __init__.py  edge_llm.py  intent_parser.py  simulated_vehicle.py  vehicle_controller.py
speechless/response/: __init__.py  tts.py
speechless/router/: __init__.py  classifier.py
speechless/routing/: planner.py
speechless/speech/: __init__.py  capture.py  stt_cloud.py  stt_local.py
speechless/telemetry/: __init__.py  reader.py
src/speechless/: __init__.py  config.py  models.py
tests/: __init__.py  conftest.py  test_bedrock_client.py  test_biometric.py  test_classifier.py  test_config.py  test_connectivity.py  test_conversation_context.py  test_dashboard_interactive.py  test_edge_llm.py  test_integration.py  test_intent_parser.py  test_logging.py  test_models.py  test_pipeline.py  test_retry.py  test_route_planner.py  test_simulated_vehicle.py  test_speech.py  test_vehicle_controller.py
(+23 files in other folders)
