[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speechless"
version = "0.1.0"
description = "Edge-first AI-powered in-vehicle voice assistant with connectivity-aware processing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "pyttsx3>=2.90",
    "openai>=1.30",
    "boto3>=1.34",
    "grpcio>=1.60",
    "kuksa-client>=0.4",
    "httpx>=0.27",
    "pymongo>=4.7",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "moto>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/speechless"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["speechless"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["speechless"]
mypy_path = "src"

[dependency-groups]
dev = [
    "hypothesis>=6.155.2",
    "pytest>=9.0.3",
]
